<resources>
    <string name="app_name">IgniteSolution</string>
    <string name="app_title">Ignite Solution</string>
    <string name="btnTroubleshoot">Troubleshoot</string>
    <string name="btnCuttingTech">Cutting Tech</string>
    <string name="btnPMSchedule">PM Schedule</string>
    <string name="btnFSCUT">铂楚 FSCUT</string>
    <string name="btnWelhong">维宏 Weihong</string>
    <string name="btnHans">大族Han’s</string>
</resources>